tests/src/frontend/syntax/invalid/lvalue_in_binary_right.sk
fun main(): String {
  a + x.!y
}
